fix(layout): fix top menu width changes when navigating from a page with scrollbar to one without

--- a/src/layouts/AppLayout.module.less
+++ b/src/layouts/AppLayout.module.less
@@ -1,4 +1,5 @@
 .menu {
+  width: 100vw !important;
   height: 48px;
 }
 
